fix bugs 1.2
